language/move-lang/tests/move_check/typing/duplicate_function_parameter_names.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/typing/duplicate_function_parameter_names.move:2:21
  │
2 │     fun foo(x: u64, x: u64) {}
  │             -       ^ Duplicate parameter with name 'x'
  │             │        
  │             Previously declared here

