language/move-lang/tests/move_check/typing/duplicate_function_parameter_names.move
module M {
    fun foo(x: u64, x: u64) {}
}
